- New action to remove duplicates from play list
- Removed xml serialization of repository as it can cause OutOfMemory with large repositories
- Multiple instances not allowed in Max OS X
- Replaced combo boxes to select navigation and context panels. Use buttons with icons instead
- Removed option to show ticks and labels in progress slider

aTunes 2.1.1
------------
- Plugins can be enabled from preferences panel [ patch by Laurent Cathala ]
- Unix shell script changed to use /bin/sh instead of /bin/bash for better compatibility
- FIX: Problems reading XML data from previous versions
- FIX: Multiple selection fires contextual menu [ 3419492 ] [ patch by deathgorepain ]
- FIX: Player error when using normalization and equalizer with MPlayer [ 3419533 ] [ patch by Laurent Cathala ]
- FIX: Device options in play list not enabled when device connected
- FIX: Hotkeys reset after application restart [ 3421011 ]
- FIX: Last.fm cache initialized several times
- FIX: Context panel update called twice
- FIX: Not enough space for remaining time in progress slider
- FIX: NPE updating statistics [ 3415186 ]
- FIX: Only WAV encoder can be selected when importing CD [ 3446197 ]


aTunes 2.1.0
------------
- New lyric engine: LyrDB (www.lyrdb.com)
- Use close buttons for playlists tabs when using Substance
- Allow creating patterns for tag edition by double-clicking on available patterns
- UI: Removed line border from titled borders
- Use absolute folder name when setting tags from patterns
- Restore selection after track deletion in playlist [3007538] [ patch by cy6ergnOm ]
- Song properties dialog improved [3002167] (patch by cy6ergnOm)
- Preferences reworked and saved immediately [ feature request 2977778 ]
- Visual improvements
- Removed multiple view
- Option to show/hide advanced player controls (karaoke, normalization)
- Moved navigation views buttons to tool bar instead of tabbed pane
- Removed play list controls panel
- Removed play list tabs, used combo box