@@ -37,6 +37,7 @@ public final class Images {
     public static final String APP_LOGO_16 = "logo16x16.png";
     public static final String APP_LOGO_24 = "logo24x24.png";
     public static final String APP_LOGO_32 = "logo32x32.png";
+    public static final String APP_LOGO_48 = "logo48x48.png";
     public static final String APP_LOGO_90 = "logo90x90.png";
     public static final String APP_LOGO_150 = "logo150x150.png";
     public static final String APP_LOGO_300 = "logo300x300.png";
