@@ -5,7 +5,7 @@
 	default-autowire="byName" default-lazy-init="true">
 
 	<bean id="progressSlider" class="net.sourceforge.atunes.gui.views.controls.playerControls.ProgressSlider" scope="prototype" init-method="initialize">
-		<property name="paintIconAllowed" value="false"/>
+		<property name="paintIconAllowed" value="true"/>
 	</bean>
 	
 	<bean id="playerControls" class="net.sourceforge.atunes.gui.views.panels.PlayerControlsPanel" init-method="initialize"/>
