@@ -10,6 +10,7 @@ aTunes 2.2.0
 - Multiple instances not allowed in Max OS X
 - Replaced combo boxes to select navigation and context panels. Use buttons with icons instead
 - Removed option to show ticks and labels in progress slider
+- UI changes in player controls
 
 aTunes 2.1.1
 ------------
